# open-AWS-scanner

./: .gitignore  DEVLOG.md  Dockerfile  README.md  pyproject.toml  release.sh
.github/workflows/: publish.yml
open_aws_scanner/: __init__.py  api.py  cli.py  database.py  scanner.py
