[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-aws-scanner"
version = "0.2.0"
description = "Find unused AWS resources costing you money. No admin, no auth, just results."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jason"},
]
keywords = ["aws", "cost-optimization", "cloud", "scanner", "waste-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sqlalchemy>=2.0.0",
    "apscheduler>=3.10.0",
    "boto3>=1.28.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0"]
dev = ["pytest", "httpx"]

[project.urls]
Homepage = "https://github.com/yourusername/open-aws-scanner"
Issues = "https://github.com/yourusername/open-aws-scanner/issues"

[project.scripts]
open-aws-scanner = "open_aws_scanner.cli:main"

[tool.setuptools.packages.find]
include = ["open_aws_scanner*"]
